log
Thu 09 May 2024 08:29:06 PM UTC: 
 tests:  1|8
total_score: 0/70
138e3d9
Thu 09 May 2024 08:30:17 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
b2789aa
Thu 09 May 2024 08:31:39 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:1: error: control reaches end of non-void function [-Werror=return-type]
   89 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3c32210
Thu 09 May 2024 08:31:58 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f605c6c
Thu 09 May 2024 08:32:45 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
5195686
Thu 09 May 2024 08:34:09 PM UTC: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  12|6
total_score: 15/70
76c3c41
Thu 09 May 2024 08:35:45 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  12|6
total_score: 15/70
450273e
Thu 09 May 2024 08:37:40 PM UTC: 
 treemap.c | 22 +++-------------------
 1 file changed, 3 insertions(+), 19 deletions(-)
 tests:  12|6
total_score: 15/70
4b4788d
